# nbd-server

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/nbd-client/: Cargo.toml
crates/nbd-client/src/: client.rs  error.rs
crates/nbd-config/: Cargo.toml  default-config.toml
crates/nbd-config/src/: lib.rs
crates/nbd-config/tests/: config_loading.rs
crates/nbd-control-plane/: Cargo.toml
crates/nbd-control-plane-core/: Cargo.toml
crates/nbd-control-plane-core/src/: diagnostics.rs  error.rs  export.rs  lib.rs  model.rs  service.rs  tree.rs  tree_format.rs
crates/nbd-control-plane-core/tests/: model.rs
crates/nbd-control-plane-sqlite/: Cargo.toml
crates/nbd-control-plane-sqlite/src/: adapter.rs  lib.rs  transaction.rs  tree_rows.rs
crates/nbd-control-plane-sqlite/tests/: sqlite_catalog.rs
crates/nbd-control-plane/src/: catalog_url.rs  error.rs  lib.rs  model.rs  sqlite.rs
crates/nbd-control-plane/tests/: catalog_url.rs  model.rs  sqlite_catalog.rs
crates/nbd-protocol/: Cargo.toml
crates/nbd-protocol/src/: constants.rs  error.rs  handshake.rs  lib.rs  option.rs  transmission.rs  wire.rs
crates/nbd-protocol/tests/: protocol_fixtures.rs
crates/nbd-server/: Cargo.toml
crates/nbd-server/src/: admission.rs  cli.rs  compaction.rs  connection.rs  doctor.rs  error.rs  export.rs  extent_map.rs  lib.rs  logging.rs  main.rs  memory.rs  observability.rs  output.rs  range.rs  read_cache.rs  registry.rs  runtime.rs  server.rs  simple_durable.rs  tree_reader.rs  wal.rs  wal_durable.rs
crates/nbd-server/src/connection/: handshake.rs  io.rs  mod.rs  options.rs  replies.rs  shutdown.rs  transmission.rs
crates/nbd-server/src/engines/: memory.rs  mod.rs
crates/nbd-server/src/engines/simple_durable/: mod.rs  mutable_tree.rs  reader.rs
crates/nbd-server/src/engines/tree/: edit.rs  geometry.rs  mod.rs  read.rs
crates/nbd-server/src/engines/wal_durable/: admission.rs  compaction.rs  extent_map.rs  mod.rs  overlay.rs  read_cache.rs  read_view.rs
crates/nbd-server/src/export/: admission.rs  completion.rs  engine.rs  mod.rs  request.rs  runtime.rs
crates/nbd-server/src/registry/: active.rs  factory.rs  mod.rs
crates/nbd-server/src/storage/: local.rs  mod.rs  s3.rs
crates/nbd-server/src/wal/: codec.rs  local.rs  mod.rs  replay.rs
crates/nbd-server/tests/: admission.rs  compaction.rs  config_command.rs  export_runtime.rs  installed_smoke.rs  local_export_registry.rs  memory_export.rs  s3_blob_store.rs  simple_durable.rs  tcp_integration.rs  wal.rs  wal_durable.rs
crates/nbd-server/tests/support/: mod.rs  nbd.rs
crates/nbd-test-support/: Cargo.toml
crates/nbd-test-support/src/: lib.rs
crates/nbd-test-support/tests/: runtime_fixture.rs
crates/nbd-us-client/: Cargo.toml
crates/nbd-us-client/src/: client.rs  error.rs  lib.rs
crates/nbdcli/: Cargo.toml
crates/nbdcli/src/: cli.rs  doctor.rs  main.rs  output.rs
crates/nbdcli/tests/: cli.rs  installed_smoke.rs
docker/: Dockerfile
docs/architecture/: compaction-manager-architecture.md  export-admission-control.md  export-catalog-architecture.md  export-lifecycle-architecture.md  export-read-view-architecture.md  export-tree-metadata.md  local-export-registry-architecture.md  nbd-protocol-architecture.md  nbd-s3-long-term-architecture.md  storage-engine-architecture.md  wal-architecture.md  workqueue-architecture.md
docs/context/: 2026-05-01-nbd-s3-architecture-context.md
docs/execution/: 2026-05-01-initial-integration.md  2026-05-03-connection-admission-concurrency.md  2026-05-04-local-wal.md  2026-05-04-simple-durable-engine.md  2026-05-05-read-view-overlay-cache.md  2026-05-06-export-head-ownership-compaction.md  2026-05-07-nbd-server-module-topology.md  2026-05-07-read-view-background-compaction.md  2026-05-08-operator-cli-contract.md  2026-05-12-control-plane-storage-adapter-boundary.md
docs/plans/: 2026-05-03-concurrent-runtime-default.md  2026-05-03-connection-admission-concurrency.md  2026-05-04-local-wal.md  2026-05-04-logging-instrumentation.md  2026-05-04-simple-durable-engine.md  2026-05-05-cow-clone.md  2026-05-05-read-view-overlay-cache.md  2026-05-06-connection-task-shutdown.md  2026-05-06-export-head-ownership-compaction.md  2026-05-07-nbd-server-module-topology.md  2026-05-07-read-view-background-compaction.md  2026-05-07-s3-blob-store-demo.md  2026-05-07-storage-module-blob-store-api.md  2026-05-08-operator-cli-contract.md  2026-05-09-docker-smoke-output-framework.md  2026-05-12-control-plane-storage-adapter-boundary.md
docs/plans/initial-integration/: 2026-05-01-catalog-sdk-v1.md  2026-05-01-in-memory-nbd-server.md  2026-05-01-rust-workspace-testing.md  2026-05-01-toy-nbd-server.md  2026-05-02-docker-kernel-smoke.md  2026-05-02-export-runtime-registry.md
docs/roadmaps/: 2026-05-01-initial-integration-roadmap.md
prisma/: Makefile  schema.prisma
prisma/migrations/20260501000000_init/: migration.sql
prisma/migrations/20260504000000_export_heads_tree_metadata/: migration.sql
prisma/migrations/20260504010000_simple_durable_engine_kind/: migration.sql
prisma/migrations/20260505000000_wal_durable_engine_kind/: migration.sql
prisma/migrations/20260505010000_cow_tree_metadata/: migration.sql
prisma/migrations/20260506000000_baseline/: migration.sql
prisma/migrations/20260512000000_tree_format/: migration.sql
scripts/docker/: docker-smoke-s3.sh  docker-smoke.sh  kernel-smoke.sh  nbd-device-smoke.sh  rustfs-s3-test.sh  test-smoke-log.sh
scripts/docker/kernel-smoke/: harness.sh
scripts/docker/kernel-smoke/scenarios/: memory-basic.sh  simple-durable-basic.sh  wal-durable-basic.sh  wal-durable-s3-basic.sh
scripts/docker/lib/: smoke-docker.sh  smoke-log.sh
scripts/docker/nbd-device-smoke/: harness.sh
scripts/docker/nbd-device-smoke/scenarios/: memory-basic.sh  simple-durable-basic.sh  wal-durable-basic.sh  wal-durable-s3-basic.sh
