[workspace]
members = [
    "crates/nbd-config",
    "crates/nbd-control-plane",
    "crates/nbd-us-client",
    "crates/nbd-protocol",
    "crates/nbd-server",
    "crates/nbd-test-support",
    "crates/nbdcli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
thiserror = "2.0"
