[package]
name = "nbd-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nbd-protocol = { path = "../nbd-protocol" }
tokio = { version = "1.37", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
