[package]
name = "nbd-control-plane-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
uuid = { version = "1.8", features = ["v4"] }
