[package]
name = "nbd-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
nbd-test-support = { path = "../nbd-test-support" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
