[package]
name = "nbd-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
s3 = ["dep:aws-sdk-s3"]

[dependencies]
async-trait = "0.1"
aws-sdk-s3 = { version = "1", optional = true, features = ["behavior-version-latest"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
crc = "3.4"
nbd-config = { path = "../nbd-config" }
nbd-control-plane = { path = "../nbd-control-plane" }
nbd-protocol = { path = "../nbd-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
nbd-control-plane-sqlite = { path = "../nbd-control-plane-sqlite" }
nbd-us-client = { path = "../nbd-us-client" }
nbd-test-support = { path = "../nbd-test-support" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
