[package]
name = "nbd-us-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nbd-protocol = { path = "../nbd-protocol" }
thiserror.workspace = true
tokio = { version = "1.37", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
