[package]
name = "nbdcli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nbd-config = { path = "../nbd-config" }
nbd-control-plane = { path = "../nbd-control-plane" }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
nbd-test-support = { path = "../nbd-test-support" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
